--- a/Medicare/Content/style.css
+++ b/Medicare/Content/style.css
@@ -9,7 +9,7 @@
 :: Last Updated: 04 March 2018
 ---------------------------------------------------------- */
 /* [ -- Master Stylesheet -- ] */
-/* ------------- Index of Stylesheet -------------
+/* ------------- Index of Stylesheet -------------.single-hero-slide
 :: 1.0 Import Fonts
 :: 2.0 Import All CSS
 :: 3.0 Base CSS
@@ -576,13 +576,13 @@ img {
   position: relative;
   z-index: 1;
   width: 100%;
-  height: 900px; }
+  height: 630px; }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .single-hero-slide {
-      height: 700px; } }
+      height: 630px; } }
   @media only screen and (max-width: 767px) {
     .single-hero-slide {
-      height: 700px; } }
+      height: 630px; } }
 
 .hero-slides-content h2 {
   color: #081f3e;
